@@ -32,6 +32,7 @@ import java.util.List;
  * int $a = 3,
  * #[A(1)] int $a, // [NETBEANS-4443] PHP8.0 Attribute Syntax
  * public int $x = 0, // [NETBEANS-4443] PHP8.0 Constructor Property Promotion
+ * public protected(set) int $x = 0 {get => $this->x; set{}}, // [GH-8035] PHP8.4 Property hooks with Constructor Property Promotion
  * </pre>
  */
 public class FormalParameter extends ASTNode implements Attributed {
@@ -40,8 +41,10 @@ public class FormalParameter extends ASTNode implements Attributed {
     private Expression parameterType;
     private Expression parameterName;
     private Expression defaultValue;
+    private Block propertyHooks;
     private final List<Attribute> attributes = new ArrayList<>();
 
+    // Use Builder instead
     public FormalParameter(int start, int end, Integer modifier, Expression type, final Expression parameterName, Expression defaultValue) {
         this(start, end, modifier == null ? 0 : modifier, type, parameterName, defaultValue, Collections.emptyList());
     }
@@ -75,19 +78,27 @@ public class FormalParameter extends ASTNode implements Attributed {
         this.defaultValue = defaultValue;
     }
 
+    private FormalParameter(Builder builder) {
+        super(builder.start, builder.end);
+        modifier = builder.modifier;
+        parameterType = builder.parameterType;
+        parameterName = builder.parameterName;
+        defaultValue = builder.defaultValue;
+        propertyHooks = builder.propertyHooks;
+        attributes.addAll(builder.attributes);
+    }
+
     public static FormalParameter create(FormalParameter parameter, List<Attribute> attributes) {
         assert attributes != null;
         int start = attributes.isEmpty() ? parameter.getStartOffset() : attributes.get(0).getStartOffset();
-        return new FormalParameter(
-                start,
-                parameter.getEndOffset(),
-                parameter.getModifier(),
-                parameter.getParameterType(),
-                parameter.getParameterName(),
-                parameter.getDefaultValue(),
-                attributes
-        );
-
+        return new Builder(start, parameter.getEndOffset())
+                .modifier(parameter.getModifier())
+                .parameterType(parameter.getParameterType())
+                .parameterName(parameter.getParameterName())
+                .defaultValue(parameter.getDefaultValue())
+                .propertyHooks(parameter.getPropertyHooks())
+                .attributes(attributes)
+                .build();
     }
 
     public int getModifier() {
@@ -143,12 +154,16 @@ public class FormalParameter extends ASTNode implements Attributed {
 
     @Override
     public List<Attribute> getAttributes() {
-        return Collections.unmodifiableList(attributes);
+        return List.copyOf(attributes);
     }
 
     @Override
     public boolean isAttributed() {
         return !attributes.isEmpty();
+    }
+
+    public Block getPropertyHooks() {
+        return propertyHooks;
     }
 
     @Override
@@ -171,4 +186,55 @@ public class FormalParameter extends ASTNode implements Attributed {
                 + (isMandatory() ? "" : " = " + getDefaultValue()); // NOI18N
     }
 
+    //~ Inner class
+    public static class Builder {
+
+        private final int start;
+        private final int end;
+        private int modifier = 0;
+        private Expression parameterType = null;
+        private Expression parameterName = null;
+        private Expression defaultValue = null;
+        private Block propertyHooks = null;
+        private List<Attribute> attributes = List.of();
+
+        public Builder(int start, int end) {
+            this.start = start;
+            this.end = end;
+        }
+
+        public Builder modifier(Integer modifier) {
+            this.modifier = modifier == null ? 0 : modifier;
+            return this;
+        }
+
+        public Builder parameterType(Expression parameterType) {
+            this.parameterType = parameterType;
+            return this;
+        }
+
+        public Builder parameterName(Expression parameterName) {
+            this.parameterName = parameterName;
+            return this;
+        }
+
+        public Builder defaultValue(Expression defaultValue) {
+            this.defaultValue = defaultValue;
+            return this;
+        }
+
+        public Builder propertyHooks(Block propertyHooks) {
+            this.propertyHooks = propertyHooks;
+            return this;
+        }
+
+        public Builder attributes(List<Attribute> attributes) {
+            this.attributes = List.copyOf(attributes);
+            return this;
+        }
+
+        public FormalParameter build() {
+            return new FormalParameter(this);
+        }
+    }
 }
